k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  selector:
    matchLabels:
      app: myweb
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: alexwithdoeckertest/myweb
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: my-webservice
spec:
  type: NodePort

  selector:
    app: myweb
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
