k8w_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: alexwithdoeckertest/web
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: my-webservice
spec:
  type: NodePort

  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
